--- a/init.org
+++ b/init.org
@@ -676,7 +676,7 @@ See the git repository: [[https://github.com/org-roam/org-roam-bibtex][org-roam-
           (vm-imap . vm-visit-imap-folder-other-frame)
           (gnus . org-gnus-no-new-news)
           (file . find-file)
-          (wl . wl-other-frame))))
+          (wl . wl-other-frame)))
 #+end_src
 
 *** Custom functions
