--- a/init.org
+++ b/init.org
@@ -81,7 +81,7 @@ Install exwm and load its configuration file (currently external).
     (add-hook 'exwm-randr-screen-change-hook
               (defun ab/exwm-randr ()
                 (start-process-shell-command
-                 "xrandr" nil "xrandr --output eDP-1 --output DP-1")))
+                 "xrandr" nil "xrandr --output eDP-1 --output HDMI-1")))
     (exwm-randr-enable)
     (let ((exwm-config-file (concat user-opt-directory "exwm-config-file.el")))
       (if (file-exists-p exwm-config-file)
