Updated mu4e recipe.

--- a/init.org
+++ b/init.org
@@ -1578,11 +1578,7 @@ I don't use this anymore.
 ** mu4e
 #+begin_src emacs-lisp :noweb no-export
   (use-package mu4e
-    :straight
-    (:host github :repo "djcb/mu" :branch "release/1.6"
-           :pre-build
-           (("meson" "build") ("ninja" "-C" "build"))
-           :files (:defaults "build/mu4e/*"))
+    :straight (:files (:defaults "build/mu4e/*"))
     :defer nil
     :custom   (mu4e-mu-binary (expand-file-name "build/mu/mu" (straight--repos-dir "mu")))
     :bind (("C-c p" . mml-secure-message-sign-pgpmime))
