Forced mu4e to display in the same window.

--- a/init.org
+++ b/init.org
@@ -1634,18 +1634,21 @@ Currently copied over from the old mu4e configuration file. To be updated.
 
 *** General view settings
 #+begin_src emacs-lisp
-(setq mu4e-headers-date-format "  %_d %b %y"
-      mu4e-headers-time-format "%_l:%M %P"
-      mu4e-headers-fields
-      '((:human-date . 12)
-        (:flags . 4)
-        (:size . 8)
-        (:from-or-to . 20)
-        (:thread-subject . nil))
-      mu4e-headers-skip-duplicates t)
-(setq message-kill-buffer-on-exit t)
-(setq mu4e-use-fancy-chars t)
-(setq mu4e-split-view 'horizontal)
+  (setq mu4e-headers-date-format "  %_d %b %y"
+        mu4e-headers-time-format "%_l:%M %P"
+        mu4e-headers-fields
+        '((:human-date . 12)
+          (:flags . 4)
+          (:size . 8)
+          (:from-or-to . 20)
+          (:thread-subject . nil))
+        mu4e-headers-skip-duplicates t)
+  (setq message-kill-buffer-on-exit t)
+  (setq mu4e-use-fancy-chars t)
+  (setq mu4e-split-view 'horizontal)
+  (add-to-list 'display-buffer-alist
+               `(,(regexp-quote mu4e-main-buffer-name)
+                 display-buffer-same-window))
 #+end_src
 
 *** Message view settings
