--- a/init.org
+++ b/init.org
@@ -140,6 +140,7 @@ Use [[https://github.com/karthink/popper][popper]] to manage ephemeral windows a
             "magit-log"
             ("magit-diff" . hide)
             "Zoom:chat"
+            "\\*ednc-log\\*"
             ))
     (popper-mode +1)
     (popper-echo-mode +1))
@@ -1047,7 +1048,7 @@ At the moment this is taken straight from the [[https://github.com/minad/consult
            ;;("C-c k" . consult-kmacro)
            ;; C-x bindings (ctl-x-map)
            ("C-x M-:" . consult-complex-command)     ;; orig. repeat-complex-command
-           ("C-x b" . consult-buffer)                ;; orig. switch-to-buffer
+           ("C-x b" . switch-to-buffer)                ;; orig. switch-to-buffer
            ("C-x 4 b" . consult-buffer-other-window) ;; orig. switch-to-buffer-other-window
            ("C-x 5 b" . consult-buffer-other-frame)  ;; orig. switch-to-buffer-other-frame
            ;; Custom M-# bindings for fast register access
@@ -1068,19 +1069,19 @@ At the moment this is taken straight from the [[https://github.com/minad/consult
            ("M-g i" . consult-imenu)
            ("M-g I" . consult-imenu-multi)
            ;; M-s bindings (search-map)
-           ("M-s f" . consult-find)
-           ("M-s F" . consult-locate)
-           ("M-s g" . consult-grep)
-           ("M-s G" . consult-git-grep)
-           ("M-s r" . consult-ripgrep)
-           ("M-s l" . consult-line)
+           ;; ("M-s f" . consult-find)
+           ;; ("M-s F" . consult-locate)
+           ;; ("M-s g" . consult-grep)
+           ;; ("M-s G" . consult-git-grep)
+           ;; ("M-s r" . consult-ripgrep)
+           ;; ("M-s l" . consult-line)
            ("C-s"   . consult-line)                    ;; isearch alternative
-           ("M-s L" . consult-line-multi)
-           ("M-s m" . consult-multi-occur)
-           ("M-s k" . consult-keep-lines)
-           ("M-s u" . consult-focus-lines)
+           ;; ("M-s L" . consult-line-multi)
+           ;; ("M-s m" . consult-multi-occur)
+           ;; ("M-s k" . consult-keep-lines)
+           ;; ("M-s u" . consult-focus-lines)
            ;; Isearch integration
-           ("M-s e" . consult-isearch-history)
+           ;; ("M-s e" . consult-isearch-history)
            :map isearch-mode-map
            ("M-e" . consult-isearch-history)         ;; orig. isearch-edit-string
            ("M-s e" . consult-isearch-history)       ;; orig. isearch-edit-string
@@ -1753,10 +1754,6 @@ Desktop notifications
 #+end_src
 
 *** Endnotes
-Local Variables:
-byte-compile-warnings: (not free-vars callargs cl-functions)
-End:
-
 
 ** GPG
 #+begin_src emacs-lisp
