--- a/init.org
+++ b/init.org
@@ -314,11 +314,10 @@ I don't use this anymore.
     (org-download-screenshot-method "spectacle -b -n -r -o %s")
     (org-download-image-dir "assets/"))
 #+end_src
-
 ** TODO Org-mode configuration
-:PROPERTIES:
-:header-args: :noweb-ref org-mode-config
-:END:
+:properties:
+:header-args:emacs-lisp: :noweb-ref org-mode-config :tangle no
+:end:
 This section contains all the configuration options for org-mode.
 All the source blocks in this section have the common header-arg ~:noweb-ref org-mode-config~, which means that they will be concatenated and inserted if another source block calls ~<<org-mode-config>>~.
 Currently this has just been copied over from the older ~org-mode-config.el~ file.
@@ -1613,9 +1612,9 @@ I don't use this anymore.
     )
 #+end_src
 ** mu4e configuration
-:PROPERTIES:
-:header-args: :noweb-ref mu4e-config :tangle no
-:END:
+:properties:
+:header-args:emacs-lisp: :noweb-ref mu4e-config :tangle no
+:end:
 Currently copied over from the old mu4e configuration file. To be updated.
 *** Getting mail
 #+begin_src emacs-lisp
