--- a/init.org
+++ b/init.org
@@ -1068,7 +1068,7 @@ At the moment this is taken straight from the [[https://github.com/minad/consult
            ;;("C-c k" . consult-kmacro)
            ;; C-x bindings (ctl-x-map)
            ("C-x M-:" . consult-complex-command)     ;; orig. repeat-complex-command
-           ("C-x b" . switch-to-buffer)                ;; orig. switch-to-buffer
+           ("C-x b" . consult-buffer)                ;; orig. switch-to-buffer
            ("C-x 4 b" . consult-buffer-other-window) ;; orig. switch-to-buffer-other-window
            ("C-x 5 b" . consult-buffer-other-frame)  ;; orig. switch-to-buffer-other-frame
            ;; Custom M-# bindings for fast register access
@@ -1150,7 +1150,7 @@ At the moment this is taken straight from the [[https://github.com/minad/consult
      consult-ripgrep consult-git-grep consult-grep
      consult-bookmark consult-recent-file consult-xref
      consult--source-recent-file consult--source-project-recent-file consult--source-bookmark
-     :preview-key (kbd "M-."))
+     :preview-key "M-.")
 
     ;; Optionally configure the narrowing key.
     ;; Both < and C-+ work reasonably well.
@@ -1300,6 +1300,10 @@ At the moment this is taken straight from the [[https://github.com/minad/consult
 #+end_src
 
 
+** Recentf mode
+#+begin_src emacs-lisp
+  (recentf-mode 1)
+#+end_src
 * Completion
 #+begin_src emacs-lisp
 (use-package company
